--- a/var/www/composer.json
+++ b/var/www/composer.json
@@ -8,6 +8,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.17",
+        "beberlei/doctrineextensions": "dev-master",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "6.3.*",
