--- a/var/www/config/packages/doctrine.yaml
+++ b/var/www/config/packages/doctrine.yaml
@@ -21,6 +21,9 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            datetime_functions:
+                unix_timestamp: DoctrineExtensions\Query\Mysql\UnixTimestamp
 
 when@test:
     doctrine:
